2005-01-28 11:55 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdge) added a check for negative
	gridAR after collapse. If it is found, exit 1.

2005-01-27 16:30 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchT) called gridUpdateFaceParameter
	after each gridEvaluateEdgeAtT call to make sure that face
	parameters are correct for performing validity checks.

2005-01-27 14:56 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUpdateParameters) added as hack. It projects
	node to every edge and face it can find to update parameters.
	I need to spend time and clean up all these cad routines
	to minimize raw projection.

2005-01-27 14:15 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridEvaluateOnEdge, gridEvaluateOnFace) added
	evaluation methods.
	* src/gridshape.c (gridCurvedEdgeMidpoint) replaced projection
	with evaluation to spped up exectsion and to improve the
	repeatablity of the vality check.
	* src/gridinsert.c (gridSplitEdge) implemented local edge
	midpoint routine because gridCurvedEdgeMidpoint would no pass
	old unit tests.
	
2005-01-27 11:30 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c to speed up the adaptation cycles, I have
	reduced the number of smooths and swaps and set the limits to
	the defaults (-1).

2005-01-27 10:55 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdge) Correctly constructed new
	surface topology (edges and faces) to use to project common
	node. This is required for the validity checks.

2005-01-27 09:12 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeAt) Correctly constructed new
	surface topology (edges and faces) to use to project node as it is
	created. This is required for the validity checks.
	* src/gridmpi.c (gridParallelEdgeSplit) removed the gridSplitEdgeAt
	returned EMPTY warning. A split `undo' is correctly parallelized.

2005-01-26 20:40 Mike Park  <mike.park@nasa.gov>
