@@ -1549,13 +1549,41 @@ double gridMinARAroundNodeExceptGem( Grid *grid, int node )
 
   minAR = 2.0;
 
-  for ( it = adjFirst(gridCellAdj(grid),node); adjValid(it); it = adjNext(it) ) {
+  for ( it = adjFirst(gridCellAdj(grid),node);
+	adjValid(it);
+	it = adjNext(it) ) {
     cellId = adjItem(it);
     inGem = FALSE;
     for ( igem =0; !inGem && igem < gridNGem(grid) ; igem++)
       inGem = inGem || (cellId == gridGem(grid,igem));
     if ( !inGem ) {
       gridCell( grid, cellId, nodes );
+      minAR = MIN(minAR,gridAR(grid, nodes));
+    }
+  }
+
+  return minAR;
+}
+
+double gridMinARAroundNodeExceptGemRecon( Grid *grid, int node, int becomes )
+{
+  int igem, i, cellId, nodes[4];
+  double minAR;
+  GridBool inGem;
+  AdjIterator it;
+
+  minAR = 2.0;
+
+  for ( it = adjFirst(gridCellAdj(grid),node);
+	adjValid(it);
+	it = adjNext(it) ) {
+    cellId = adjItem(it);
+    inGem = FALSE;
+    for ( igem =0; !inGem && igem < gridNGem(grid) ; igem++)
+      inGem = inGem || (cellId == gridGem(grid,igem));
+    if ( !inGem ) {
+      gridCell( grid, cellId, nodes );
+      for (i=0;i<4;i++) if (nodes[i]==node) nodes[i]=becomes;
       minAR = MIN(minAR,gridAR(grid, nodes));
     }
   }
